reduced the number of layers, added rsync

--- a/centos-python3/Dockerfile
+++ b/centos-python3/Dockerfile
@@ -1,15 +1,16 @@
 FROM centos:7
 
-RUN yum remove git -y
-RUN yum update -y
-RUN yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
-RUN yum install -y  https://centos7.iuscommunity.org/ius-release.rpm
-RUN yum install -y gcc gcc-c++ \
+RUN yum remove git -y && \
+    yum update -y && \
+    yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo && \
+    yum install -y  https://centos7.iuscommunity.org/ius-release.rpm && \
+    yum install -y gcc gcc-c++ \
                    libtool libtool-ltdl \
                    make cmake \
                    git2u-all \
                    curl \
                    wget \
+                   rsync \
                    yum-utils device-mapper-persistent-data lvm2 \
                    pkgconfig \
                    sudo \
@@ -19,12 +20,16 @@ RUN yum install -y gcc gcc-c++ \
                    openssl-devel \
                    bzip2-devel \
                    libffi-devel \
-                   yum-utils rpm-build && \
+                   yum-utils \
+                   rpm-build && \
     yum clean all
 
-RUN wget https://www.python.org/ftp/python/3.7.7/Python-3.7.7.tgz && tar xzf Python-3.7.7.tgz
-RUN Python-3.7.7/configure --enable-optimizations
-RUN make altinstall
+RUN wget https://www.python.org/ftp/python/3.7.7/Python-3.7.7.tgz && \
+    tar xzf Python-3.7.7.tgz && \
+    Python-3.7.7/configure --enable-optimizations && \
+    make altinstall && \
+    rm -rf Python-3.7.7 && \
+    rm -f Python-3.7.7.tgz
 
 RUN useradd builder -u 1000 -m -G users,wheel && \
     echo "builder ALL=(ALL:ALL) NOPASSWD:ALL" >> /etc/sudoers && \
