--- a/centos-python3/Dockerfile.3.7.7
+++ b/centos-python3/Dockerfile.3.7.7
@@ -34,8 +34,8 @@ WORKDIR	git-2.28.0
 RUN make configure && ./configure --prefix=/usr/local && \
     make all && \
     make install && \
-    rm -rf git-2.28.0 && \
-    rm -f git-2.28.0.tar.gz
+    rm -rf /git-2.28.0 && \
+    rm -f /git-2.28.0.tar.gz
 
 WORKDIR	/
 RUN wget https://www.python.org/ftp/python/3.7.7/Python-3.7.7.tgz && \
